deploy/vm-lab/shift-left-observability/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shift-left-observability
  namespace: shift-left-observability
spec:
  selector:
    app: shift-left-observability
  ports:
    - name: http
      port: 80
      targetPort: http
