deploy/vm-lab/shift-left-observability/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shift-left-observability
  namespace: shift-left-observability
spec:
  parentRefs:
    - name: lab-gateway
      namespace: harbor
  hostnames:
    - "shift-left-observability.10.113.24.96.nip.io"
  rules:
    - backendRefs:
        - name: shift-left-observability
          port: 80
